--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -117,7 +117,7 @@ button.nav__weather-saved--visible {
 }
 
 .error {
-  margin: 0;
+  margin: 5px 0 0 0;
   font-size: 0.8em;
   color: var(--z-color-alert);
 }
