Add vendor-prefixes for style.css to ensure browser support

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -19,8 +19,15 @@
 }
 
 .nav__metadata {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: column-reverse;
   flex-direction: column-reverse;
 }
 
@@ -29,11 +36,18 @@
 .nav__weather {
   width: 240px;
   padding-bottom: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
 .nav__weather-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: -1px;
 }
@@ -48,6 +62,8 @@
 }
 
 .nav__weather-data {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 42px;
   padding: 6px 12px;
@@ -61,6 +77,8 @@
 }
 
 .nav__weather-data-temperature {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-left: 10px;
 }
@@ -94,8 +112,14 @@
 }
 
 button.nav__weather-saved {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: row-reverse;
   flex-direction: row-reverse;
+  -ms-flex-item-align: start;
   align-self: flex-start;
   margin: 5px 0 0 5px;
   opacity: 0;
@@ -103,6 +127,8 @@ button.nav__weather-saved {
 }
 
 button.nav__weather-saved--visible {
+  -webkit-transition: 0.3s opacity ease;
+  -o-transition: 0.3s opacity ease;
   transition: 0.3s opacity ease;
   opacity: 1;
 }
@@ -140,7 +166,6 @@ button.nav__weather-saved--visible {
   line-height: normal;
   padding: 0 0 0 0.625em;
   width: 85%;
-  width: -webkit-calc(100% - 2.1875rem);
   width: calc(100% - 2.1875rem);
   border-radius: 4px 0 0 0;
   width: calc(100% - 70px);
@@ -159,6 +184,9 @@ button.nav__weather-saved--visible {
 
 @media only screen and (min-width: 768px) {
   .nav__metadata {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
   }
 
@@ -167,7 +195,11 @@ button.nav__weather-saved--visible {
   }
 
   button.nav__weather-saved {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -ms-flex-item-align: end;
     align-self: flex-end;
     margin: 5px 5px 0 0;
   }
